--- a/AI/FirstAIFixed/bin/ticTacToe/View.fxml
+++ b/AI/FirstAIFixed/bin/ticTacToe/View.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TicTacToe.GameScene">
+<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ticTacToe.GameScene">
    <children>
       <BorderPane fx:id="bp" maxHeight="600.0" maxWidth="900.0" prefHeight="600.0" prefWidth="900.0">
          <top>
